fixed a couple links in index and blog

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home / sarahx12</title>
+        <title>Home / tuesdx12</title>
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="musicplayer.css">
         <script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
@@ -9,11 +9,11 @@
     <body>
         <div class="wrapper">
             <div class="header">
-            <h1>Welcome to sarahx12.neocities.org</h1>
+            <h1>Welcome to girlfailure.net</h1>
             </div>
             <nav id="navigation" class="box">
-                <a href="https://sarahx12.neocities.org/blog">MY BLOG!!!!!</a>
-                <a href="https://sarahx12.neocities.org/hifriends">for my frienddssss x3</a>
+                <a href="https://girlfailure.net/blog">MY BLOG!!!!!</a>
+                <a href="https://girlfailure.net/hifriends">for my frienddssss x3</a>
                 <a href="https://x.com/girlfailurex12">my twitter account!?!!</a>
                 <a href="https://www.youtube.com/watch?v=1sCCI0bCJCY" target="_blank">funny video</a>
 
