--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Blog / sarahx12</title>
+        <title>Blog / tuesdx12</title>
         <link rel="stylesheet" href="style-blog.css">
     </head>
     <body>
