link and word changes
changed all instances of sarah to cate
changed neocities links to girlfailure.net links

--- a/blog.html
+++ b/blog.html
@@ -38,7 +38,7 @@
             }
 
             function gohome() {
-            var HomeUrl = 'https://sarahx12.neocities.org/';
+            var HomeUrl = 'https://girlfailure.net';
                 window.location.href = HomeUrl;
 
             }
