--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
             <nav id="navigation" class="box">
                 <a href="https://girlfailure.net/blog">MY BLOG!!!!!</a>
                 <a href="https://girlfailure.net/hifriends">for my frienddssss x3</a>
-                <a href="https://x.com/girlfailurex12">my twitter account!?!!</a>
+                <a href="https://x.com/ATFgirlfailure">my twitter account!?!!</a>
                 <a href="https://www.youtube.com/watch?v=1sCCI0bCJCY" target="_blank">funny video</a>
 
             </nav>
 
             <div id="aboutme" class="box">
-                <p>Hello! my name is sarah, and this is my stupid little website I'm workin on. I use this as a <i>digital journal</i> of my interests and hobbies and as a hub for anything I happen to make, particularly in pursuit of expressing myself with more <i>anonymity</i>, separate from popular social media sites like Twitter and Instagram and predatory content algorithms alike.
+                <p>Hello! my name is cate, and this is my stupid little website I'm workin on. I use this as a <i>digital journal</i> of my interests and hobbies and as a hub for anything I happen to make, particularly in pursuit of expressing myself with more <i>anonymity</i>, separate from popular social media sites like Twitter and Instagram and predatory content algorithms alike.
                     </p>
 
                 <p>This website was made with HTML and CSS, being my first foray into coding and the personal web. All credit can be found at the bottom of the page.
@@ -31,7 +31,7 @@
                 <p>Background art by <a href="https://1041uuu.jp/">1041uuu</a></p>
 
                 <p><a href="https://pastebin.com/PiDgrv3J">Music player </a>by <a href="https://adilene.net/">adilene</a></p>
-                <p>if you need to reach me, DM me on twitter @girlfailurex12</p>
+                <p>if you need to reach me, DM me on twitter @ATFgirlfailure</p>
                 
             </div>
 
