--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             </nav>
 
             <div id="aboutme" class="box">
-                <p>Hello! my name is cate, and this is my stupid little website I'm workin on. I use this as a <i>digital journal</i> of my interests and hobbies and as a hub for anything I happen to make, particularly in pursuit of expressing myself with more <i>anonymity</i>, separate from popular social media sites like Twitter and Instagram and predatory content algorithms alike.
+                <p>Hello! my name is cate, im non binary (she/they please) and this is my stupid little website I'm workin on. I use this as a <i>digital journal</i> of my interests and hobbies and as a hub for anything I happen to make, particularly in pursuit of expressing myself separate from popular social media sites like Twitter and Instagram and shit.
                     </p>
 
-                <p>This website was made with HTML and CSS, being my first foray into coding and the personal web. All credit can be found at the bottom of the page.
+                <p>Hosted with github pages, this website was made with HTML and CSS, being my first real attempt at any of this shit. All credit can be found at the bottom of the page.
                     </p>
 
                 <p>just kidding. credit right here because im still in the middle of making this site LMAO
