super awesome blog update (domain name blog + i use bluesky now)

--- a/blog.html
+++ b/blog.html
@@ -29,6 +29,11 @@
                     <h2>first day of school :P </h2>
                 </div>
             </div>
+            <div class="option-outer-box">
+                <div class="option-inner-box" id="post-4" onclick="loadpost('post-4.html')">
+                    <h2>I bought girlfailure.net</h2>
+                </div>
+            </div>
         </div> 
     </div>
         <script>
