--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
             <h1>Welcome to girlfailure.net</h1>
             </div>
             <nav id="navigation" class="box">
-                <a href="https://girlfailure.net/blog">MY BLOG!!!!!</a>
+                <a href="https://girlfailure.net/blog">Blogg</a>
+                <a href="https://x.com/ATFgirlfailure">Twitter</a>
+                <a href="https://bsky.app/profile/girlfailure.net">Bluesky</a>
                 <a href="https://girlfailure.net/hifriends">for my frienddssss x3</a>
-                <a href="https://x.com/ATFgirlfailure">my twitter account!?!!</a>
                 <a href="https://www.youtube.com/watch?v=1sCCI0bCJCY" target="_blank">funny video</a>
 
             </nav>
