--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
                 <p>if you need to reach me, DM me on twitter @ATFgirlfailure</p>
                 
             </div>
-
+<!-- Lain pic
             <div id="lain">
                 <img src="Lain.gif" alt="a gif of lain from serial experiments lain">
             </div>
-
+        -->
             <div id="musicplayer" class="box">
                 <div>
                     <marquee scrollamount="8" class="songtitle"></marquee>
@@ -76,6 +76,26 @@
                 <audio id="music" src=""></audio> 
             </div>
 
+            <div id="weeklyart" class="box">
+                <h2>✧˖°. ⋆ ˚｡⋆˚art of the week #1. ݁₊ ⊹ . ݁୨୧</h2>
+                <!--copy and paste bluesky "embed" here-->
+                <blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:temxqn3xcuy3sz3e2phnnwai/app.bsky.feed.post/3l6qfonj7ih2o" data-bluesky-cid="bafyreiesnoisp7l4jm2zjsgtuzmmbfcjvwtgwogpd3hsc3odp3zfuy23ai"><p lang="en">meow<br><br><a href="https://bsky.app/profile/did:plc:temxqn3xcuy3sz3e2phnnwai/post/3l6qfonj7ih2o?ref_src=embed">[image or embed]</a></p>&mdash; ☆彡 Kal (<a href="https://bsky.app/profile/did:plc:temxqn3xcuy3sz3e2phnnwai?ref_src=embed">@nekomatapng.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:temxqn3xcuy3sz3e2phnnwai/post/3l6qfonj7ih2o?ref_src=embed">October 17, 2024 at 2:31 PM</a></blockquote><script async src="https://embed.bsky.app/static/embed.js" charset="utf-8"></script>
+                <!--ur doing great bestie-->
+            </div>
+
+            <div id="updates" class="box">
+                <h2>Updates x3</h2>
+                <h4>version 1.1 - 10/17/24</h4>
+                <ul>hi guys
+                    <li>added weekly art section</li>
+                    <li>added updates bar</li>
+                    <li>moved site to new domain x3</li>
+                    <li>updated nav bar</li>
+                    <li>removed lain gif</li>
+                    <li>changed link color</li>
+                    <li>fixed main site scrollbar color</li>
+                </ul>
+            </div>
         </div>
     <script src="musicplayer.js"></script>
 
