--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home / tuesdx12</title>
+        <title>Home / girlfailure.net</title>
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="musicplayer.css">
         <script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
@@ -9,7 +9,9 @@
     <body>
         <div class="wrapper">
             <div class="header">
-            <h1>Welcome to girlfailure.net</h1>
+                <h1>
+                    <span style="color:#FF0000">w</span><span style="color:#FF4000">e</span><span style="color:#FF8000">l</span><span style="color:#FFBF00">c</span><span style="color:#FFFF00">o</span><span style="color:#BFFF00">m</span><span style="color:#80FF00">e</span> <span style="color:#40FF00">t</span><span style="color:#00FF00">o</span> <span style="color:#00FF40">g</span><span style="color:#00FF80">i</span><span style="color:#00FFBF">r</span><span style="color:#00FFFF">l</span><span style="color:#00BFFF">f</span><span style="color:#007FFF">a</span><span style="color:#0040FF">i</span><span style="color:#0000FF">l</span><span style="color:#4000FF">u</span><span style="color:#7F00FF">r</span><span style="color:#BF00FF">e</span><span style="color:#FF00FF">.</span><span style="color:#FF00BF">n</span><span style="color:#FF0080">e</span><span style="color:#FF0040">t</span>
+                </h1>
             </div>
             <nav id="navigation" class="box">
                 <a href="https://girlfailure.net/blog">Blogg</a>
