--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <title>Home / girlfailure.net</title>
+        <title>Home / tuesdx12</title>
         <link rel="stylesheet" href="style-index.css">
         <link rel="stylesheet" href="musicplayer.css">
         <script src="https://kit.fontawesome.com/f936906ae0.js" crossorigin="anonymous"></script>
