art of the week #2 :P

--- a/index.html
+++ b/index.html
@@ -79,9 +79,10 @@
             </div>
 
             <div id="weeklyart" class="box">
-                <h2>✧˖°. ⋆ ˚｡⋆˚art of the week #1. ݁₊ ⊹ . ݁୨୧</h2>
+                <h2>✧˖°. ⋆ ˚｡⋆˚art of the week #2. ݁₊ ⊹ . ݁୨୧</h2>
+                <h3>i forgot to update this for like 3 weeks x3</h3>
                 <!--copy and paste bluesky "embed" here-->
-                <blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:temxqn3xcuy3sz3e2phnnwai/app.bsky.feed.post/3l6qfonj7ih2o" data-bluesky-cid="bafyreiesnoisp7l4jm2zjsgtuzmmbfcjvwtgwogpd3hsc3odp3zfuy23ai"><p lang="en">meow<br><br><a href="https://bsky.app/profile/did:plc:temxqn3xcuy3sz3e2phnnwai/post/3l6qfonj7ih2o?ref_src=embed">[image or embed]</a></p>&mdash; ☆彡 Kal (<a href="https://bsky.app/profile/did:plc:temxqn3xcuy3sz3e2phnnwai?ref_src=embed">@nekomatapng.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:temxqn3xcuy3sz3e2phnnwai/post/3l6qfonj7ih2o?ref_src=embed">October 17, 2024 at 2:31 PM</a></blockquote><script async src="https://embed.bsky.app/static/embed.js" charset="utf-8"></script>
+                <blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:qvyv2xdtpqumezyvs5lcqase/app.bsky.feed.post/3l7y5eb3pkn2z" data-bluesky-cid="bafyreiamcapkpctuxqgcvwsakr5nt5dashwjryjqgqhqdf7jmzsbmjjhxa"><p lang="en">in my bog<br><br><a href="https://bsky.app/profile/did:plc:qvyv2xdtpqumezyvs5lcqase/post/3l7y5eb3pkn2z?ref_src=embed">[image or embed]</a></p>&mdash; kael the android (<a href="https://bsky.app/profile/did:plc:qvyv2xdtpqumezyvs5lcqase?ref_src=embed">@kael3.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:qvyv2xdtpqumezyvs5lcqase/post/3l7y5eb3pkn2z?ref_src=embed">November 2, 2024 at 9:49 AM</a></blockquote><script async src="https://embed.bsky.app/static/embed.js" charset="utf-8"></script>
                 <!--ur doing great bestie-->
             </div>
 
