updated weekly art / git test

--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
             </div>
 
             <div id="weeklyart" class="box">
-                <h2>✧˖°. ⋆ ˚｡⋆˚art of the week #2. ݁₊ ⊹ . ݁୨୧</h2>
-                <h3>i forgot to update this for like 3 weeks x3</h3>
-                <!--copy and paste bluesky "embed" here-->
-                <blockquote class="bluesky-embed" data-bluesky-uri="at://did:plc:qvyv2xdtpqumezyvs5lcqase/app.bsky.feed.post/3l7y5eb3pkn2z" data-bluesky-cid="bafyreiamcapkpctuxqgcvwsakr5nt5dashwjryjqgqhqdf7jmzsbmjjhxa"><p lang="en">in my bog<br><br><a href="https://bsky.app/profile/did:plc:qvyv2xdtpqumezyvs5lcqase/post/3l7y5eb3pkn2z?ref_src=embed">[image or embed]</a></p>&mdash; kael the android (<a href="https://bsky.app/profile/did:plc:qvyv2xdtpqumezyvs5lcqase?ref_src=embed">@kael3.bsky.social</a>) <a href="https://bsky.app/profile/did:plc:qvyv2xdtpqumezyvs5lcqase/post/3l7y5eb3pkn2z?ref_src=embed">November 2, 2024 at 9:49 AM</a></blockquote><script async src="https://embed.bsky.app/static/embed.js" charset="utf-8"></script>
+                <h2>✧˖°. ⋆ ˚｡⋆˚art of the week #3. ݁₊ ⊹ . ݁୨୧</h2>
+                <h3>Didnt change this for a month what sup chat</h3>
+                <!--copy and paste bluesky / twitter "embed" here-->
+                <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/Yby0v5drQn">pic.twitter.com/Yby0v5drQn</a></p>&mdash; Izmi (@izm_ni) <a href="https://twitter.com/izm_ni/status/1879936844227572087?ref_src=twsrc%5Etfw">January 16, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
                 <!--ur doing great bestie-->
             </div>
 
