--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
                 <h1>
                     <span style="color:#FF0000">w</span><span style="color:#FF4000">e</span><span style="color:#FF8000">l</span><span style="color:#FFBF00">c</span><span style="color:#FFFF00">o</span><span style="color:#BFFF00">m</span><span style="color:#80FF00">e</span> <span style="color:#40FF00">t</span><span style="color:#00FF00">o</span> <span style="color:#00FF40">g</span><span style="color:#00FF80">i</span><span style="color:#00FFBF">r</span><span style="color:#00FFFF">l</span><span style="color:#00BFFF">f</span><span style="color:#007FFF">a</span><span style="color:#0040FF">i</span><span style="color:#0000FF">l</span><span style="color:#4000FF">u</span><span style="color:#7F00FF">r</span><span style="color:#BF00FF">e</span><span style="color:#FF00FF">.</span><span style="color:#FF00BF">n</span><span style="color:#FF0080">e</span><span style="color:#FF0040">t</span>
                 </h1>
+                <h2>
+                    (v1 btw x3)
+                </h2>
             </div>
             <nav id="navigation" class="box">
                 <a href="https://girlfailure.net/blog">Blogg</a>
-                <a href="https://x.com/ATFgirlfailure">Twitter</a>
+                <a href="https://x.com/tuesdx12">Twitter</a>
                 <a href="https://bsky.app/profile/girlfailure.net">Bluesky</a>
                 <a href="https://girlfailure.net/hifriends">for my frienddssss x3</a>
                 <a href="https://www.youtube.com/watch?v=1sCCI0bCJCY" target="_blank">funny video</a>
@@ -23,10 +26,10 @@
             </nav>
 
             <div id="aboutme" class="box">
-                <p>Hello! my name is cate, im non binary (she/they please) and this is my stupid little website I'm workin on. I use this as a <i>digital journal</i> of my interests and hobbies and as a hub for anything I happen to make, particularly in pursuit of expressing myself separate from popular social media sites like Twitter and Instagram and shit.
+                <p>Hello! my name is cate!! and this is my stupid little website I'm workin on
                     </p>
 
-                <p>Hosted with github pages, made in vscode, this website was made with HTML and CSS, being my first real attempt at any of this shit. All credit can be found at the bottom of the page.
+                <p>Hosted with github pages, made in vscode, this website was made with HTML and CSS, being my first real attempt at any of this stuff. All credit can be found at the bottom of the page.
                     </p>
 
                 <p>just kidding. credit right here because im still in the middle of making this site LMAO
@@ -34,7 +37,7 @@
                 <p>Background art by <a href="https://1041uuu.jp/">1041uuu</a></p>
 
                 <p><a href="https://pastebin.com/PiDgrv3J">Music player </a>by <a href="https://adilene.net/">adilene</a></p>
-                <p>if you need to reach me, DM me on twitter @ATFgirlfailure</p>
+                <p>if you need to reach me, DM me on twitter @tuesdx12</p>
                 
             </div>
 <!-- Lain pic
@@ -79,10 +82,10 @@
             </div>
 
             <div id="weeklyart" class="box">
-                <h2>✧˖°. ⋆ ˚｡⋆˚art of the week #3. ݁₊ ⊹ . ݁୨୧</h2>
-                <h3>Didnt change this for a month what sup chat</h3>
+                <h2>✧˖°. ⋆ ˚｡⋆˚art i liked recently. ݁₊ ⊹ . ݁୨୧</h2>
+                <h3>Getting back to working on the site so more art!!</h3>
                 <!--copy and paste bluesky / twitter "embed" here-->
-                <blockquote class="twitter-tweet"><p lang="zxx" dir="ltr"><a href="https://t.co/Yby0v5drQn">pic.twitter.com/Yby0v5drQn</a></p>&mdash; Izmi (@izm_ni) <a href="https://twitter.com/izm_ni/status/1879936844227572087?ref_src=twsrc%5Etfw">January 16, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                <blockquote class="twitter-tweet"><p lang="qme" dir="ltr">🤝🏻 <a href="https://t.co/tNxALpp0Gx">pic.twitter.com/tNxALpp0Gx</a></p>&mdash; Jojodoboro (@Jojidoboro) <a href="https://twitter.com/Jojidoboro/status/1965093083353416191?ref_src=twsrc%5Etfw">September 8, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
                 <!--ur doing great bestie-->
             </div>
 
@@ -97,6 +100,13 @@
                     <li>removed lain gif</li>
                     <li>changed link color</li>
                     <li>fixed main site scrollbar color</li>
+                </ul>
+                <h4>version 1.2 - 9/10/25</h4>
+                <ul>im baacckkkk
+                    <li>updated about me section</li>
+                    <li>changed art of the week to "art i liked recently"</li>
+                    <li>new art yayy</li>
+                    <li>not really a site thing, but set up the git repository on my new laptop!!</li>
                 </ul>
             </div>
         </div>
