--- a/index.html
+++ b/index.html
@@ -17,16 +17,22 @@
                 </h2>
             </div>
             <nav id="navigation" class="box">
-                <a href="https://girlfailure.net/blog">Blogg</a>
+                <a href="https://girlfailure.net/blog">Blog</a>
                 <a href="https://x.com/tuesdx12">Twitter</a>
                 <a href="https://bsky.app/profile/girlfailure.net">Bluesky</a>
+                <a href="https://www.twitch.tv/tuesdx12">Twitch</a>
+                <a href="https://www.youtube.com/@tuesdx12">Youtube</a>
+                <a href="https://discord.gg/r9ZyAsVQmA">Discord server</a>
                 <a href="https://girlfailure.net/hifriends">for my frienddssss x3</a>
                 <a href="https://www.youtube.com/watch?v=1sCCI0bCJCY" target="_blank">funny video</a>
 
             </nav>
 
             <div id="aboutme" class="box">
-                <p>Hello! my name is cate!! and this is my stupid little website I'm workin on
+                <p>Hello! my name is cate!! and this is my stupid little website I'm working on
+                    </p>
+                <p>
+                    I haven't updated this site super consistently but I hope too soon. All my socials r on the side panel!! xD
                     </p>
 
                 <p>Hosted with github pages, made in vscode, this website was made with HTML and CSS, being my first real attempt at any of this stuff. All credit can be found at the bottom of the page.
@@ -85,14 +91,14 @@
                 <h2>✧˖°. ⋆ ˚｡⋆˚art i liked recently. ݁₊ ⊹ . ݁୨୧</h2>
                 <h3>Getting back to working on the site so more art!!</h3>
                 <!--copy and paste bluesky / twitter "embed" here-->
-                <blockquote class="twitter-tweet"><p lang="qme" dir="ltr">🤝🏻 <a href="https://t.co/tNxALpp0Gx">pic.twitter.com/tNxALpp0Gx</a></p>&mdash; Jojodoboro (@Jojidoboro) <a href="https://twitter.com/Jojidoboro/status/1965093083353416191?ref_src=twsrc%5Etfw">September 8, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+                <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Wait fuuuck this is so much more tuff <a href="https://t.co/QfzLmDeUYT">pic.twitter.com/QfzLmDeUYT</a></p>&mdash; finnypi 🌻 (@ilovemobble) <a href="https://twitter.com/ilovemobble/status/1988387310539600339?ref_src=twsrc%5Etfw">November 11, 2025</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
                 <!--ur doing great bestie-->
             </div>
 
             <div id="updates" class="box">
                 <h2>Updates x3</h2>
                 <h4>version 1.1 - 10/17/24</h4>
-                <ul>hi guys
+                <ul>
                     <li>added weekly art section</li>
                     <li>added updates bar</li>
                     <li>moved site to new domain x3</li>
@@ -102,11 +108,17 @@
                     <li>fixed main site scrollbar color</li>
                 </ul>
                 <h4>version 1.2 - 9/10/25</h4>
-                <ul>im baacckkkk
+                <ul>
                     <li>updated about me section</li>
                     <li>changed art of the week to "art i liked recently"</li>
                     <li>new art yayy</li>
                     <li>not really a site thing, but set up the git repository on my new laptop!!</li>
+                </ul>
+                <h4>version 1.3 - 11/12/25</h4>
+                <ul>
+                    <li>Added all my socials</li>
+                    <li>updated main paragraph</li>
+                    <li>new art ig</li>
                 </ul>
             </div>
         </div>
